--- a/guidebox.html
+++ b/guidebox.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto News</title>
+    <title>Metal Crypto News</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
@@ -18,15 +18,20 @@
    
   <nav>
     <div class="container nav-container">
-      <a href="index.html" class="logo">Crypto News</a>
+      <a href="index.html" class="logo">
+        <img src="assets/logos/mc news.png" alt="">
+      </a>
 
       <ul class="navbar">
-         <li><a href="index.html">All News</a></li>
-         <li><a href="">Market Analyses</a></li>
-         <li><a href="content.html">Exclusive</a></li>
-         <li><a href="defi.html">DeFi & NFTs</a></li>
-         <li><a href="guide.html">Guide</a></li>
-      </ul>
+        <li><a href="index.html">All News</a></li>
+       
+        <li><a href="exclusive.html">Exclusive</a></li>
+        <li><a href="defi.html">DeFi & NFTs</a></li>
+        <li><a href="guide.html">Guide</a></li>
+        <li><a href="#"><i class="uil uil-search"></i></a></li>
+        <li><a href="#"><i class="uil uil-share-alt"></i></a></li>
+    
+     </ul>
 
       <button id="open-nav"><i class="uil uil-bars"></i></button>
       <button id="close-nav"><i class="uil uil-multiply"></i></button>
@@ -196,7 +201,7 @@
       </div>
 
       <div class="footer_copyright">
-          <small>&copy; 2023 CryptoNews. All Rights Reserved</small>
+          <small>&copy; 2023 Metal Crypto News. All Rights Reserved</small>
         </div>
 
 
