--- a/defiguide.html
+++ b/defiguide.html
@@ -18,15 +18,20 @@
    
   <nav>
     <div class="container nav-container">
-      <a href="index.html" class="logo">Crypto News</a>
+      <a href="index.html" class="logo">
+        <img src="assets/logos/mc news.png" alt="">
+      </a>
 
       <ul class="navbar">
-         <li><a href="index.html">All News</a></li>
-         <li><a href="">Market Analyses</a></li>
-         <li><a href="content.html">Exclusive</a></li>
-         <li><a href="defi.html">DeFi & NFTs</a></li>
-         <li><a href="guide.html">Guide</a></li>
-      </ul>
+        <li><a href="index.html">All News</a></li>
+       
+        <li><a href="exclusive.html">Exclusive</a></li>
+        <li><a href="defi.html">DeFi & NFTs</a></li>
+        <li><a href="guide.html">Guide</a></li>
+        <li><a href="#"><i class="uil uil-search"></i></a></li>
+        <li><a href="#"><i class="uil uil-share-alt"></i></a></li>
+    
+     </ul>
 
       <button id="open-nav"><i class="uil uil-bars"></i></button>
       <button id="close-nav"><i class="uil uil-multiply"></i></button>
@@ -192,7 +197,7 @@
       </div>
 
       <div class="footer_copyright">
-          <small>&copy; 2023 CryptoNews. All Rights Reserved</small>
+          <small>&copy; 2023 Metal Crypto News. All Rights Reserved</small>
         </div>
 
 
